--- a/TicTacToe.tex
+++ b/TicTacToe.tex
@@ -22,7 +22,7 @@
 \hline
 
 %Indsæt dit træk her: 
-X &   &   \\ \hline
+X & O &   \\ \hline
 K  &   &   \\ \hline
   &   &   \\ \hline
 \end{tabular}
